testsuite/bsc.typechecker/typeclasses/ATFParamIsResult.bs.bsc-out.expected
checking package dependencies
compiling ATFParamIsResult.bs
Error: "ATFParamIsResult.bs", line 7, column 7: (T0154)
  Type function declaration for `Foo' uses `a' as both a parameter and the
  result
